Changed compareTo in Average to use Long.valueOf.